[project]
name = ''
version = ''
description = ''
authors = [
    {name = 'Steven Xu', email = 'stevenxxiu@gmail.com'},
]
dependencies = []
requires-python = '>=3.12'
license = {text = 'MIT'}

[tool.basedpyright]
reportIncompatibleMethodOverride = false
reportMissingModuleSource = false

[tool.pylint]
disable = [
    'invalid-name',
    'missing-docstring',
    'no-member',
    'too-few-public-methods',
    'too-many-ancestors',
]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
