[project]
name = ''
version = ''
description = ''
authors = [
    {name = 'Steven Xu', email = 'stevenxxiu@gmail.com'},
]
dependencies = [
    'i3ipc>=2.2.1',
]
requires-python = '>=3.14'
license = {text = 'MIT'}

[tool.basedpyright]
extraPaths = [
    '__pypackages__/3.14/lib/',
    '/usr/lib/python3.14/site-packages/pdm/pep582/',
]
reportIncompatibleMethodOverride = false
reportMissingModuleSource = false

[tool.pylint]
disable = [
    'invalid-name',
    'missing-docstring',
    'no-member',
    'too-few-public-methods',
    'too-many-ancestors',
]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
